# gdiz-predictive-maintenance

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  dashboard.py  docker-compose.yml  pyproject.toml  requirements.txt  to-do.txt
.github/workflows/: ci.yml
app/: main.py  model.joblib  schemas.py  utils.py
config/: config.yaml
models/: model_pipeline.pkl  optimal_threshold.json
notebooks/: 0_gdiz_dataset.ipynb  1_test.ipynb
scripts/: check_drift.py  gdiz_dataset.ipynb  generate_synthetic_data.py  run_training.py
src/: config_loader.py  configloader.py  data_loader.py  dataloader.py  features.py  generate_synthetic_data.py  preprocessor.py  train.py  xpredict.py
tests/: conftest.py  test_api.py  test_dataloader.py  test_main.py  test_pipeline.py  test_train.py
ui/: constants.py  helpers.py  queries.py  styles.py
ui/tabs/: tab_about.py  tab_general.py  tab_machine.py
