[project]
name = "mlops-predictive-maintenance"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.5.3",
    "fastapi>=0.136.1",
    "matplotlib>=3.10.9",
    "mlflow>=2.13.0",
    "numpy>=2.4.4",
    "pandas>=2.0.0",
    "pydantic>=2.13.3",
    "pytest>=9.0.3",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "uvicorn>=0.46.0",
]
