[project]
name = "mlops-predictive-maintenance"
version = "0.1.0"
description = "Plateforme MLOps de maintenance prédictive pour les machines textiles de la GDIZ Bénin"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.5.3",
    "fastapi>=0.136.1",
    "mlflow>=2.13.0",
    "numpy>=2.4.4",
    "pandas>=2.0.0",
    "pydantic>=2.13.3",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.8.0",
    "uvicorn>=0.46.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.0",
    "matplotlib>=3.10.9",
    "pytest>=9.0.3",
    "pytest-cov>=6.0.0",
    "ruff>=0.11.0",
    "seaborn>=0.13.2",
]

[tool.ruff]
exclude = ["notebooks/", ".venv/"]
line-length = 130

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]